@@ -7,6 +7,15 @@
 ///   - [y]: Minor version with non-breaking API and library changes
 ///   - [z]: Patch version with no direct changes to the API
 ///
+/// - 2026/01/31 (4.13.2) - Fix: replace incorrect static asserts for size(nk_bool)
+/// - 2026/01/26 (4.13.1) - Fix: nk_do_property now uses NK_STRTOD via macro
+///                       - Fix: failure to build from source, due to
+///                         nuklear_math/util.c not declaring some functions
+///                       - Fix: guard nk_strtod implementation with preprocessor
+///                       - Fix: nuklear_sdl3_renderer now provides NK_DTOA
+///                       - Fix: guard nk_pow, nk_ifloord, nk_log10 with preprocessor
+/// - 2025/11/15 (4.13.0) - Fix: nk_property not updating 'win->edit.active'
+///                         Add new updated demo: sdl3_renderer
 /// - 2025/10/08 (4.12.8) - Fix nk_widget_text to use NK_TEXT_ALIGN_LEFT by default,
 ///                         instead of silently failing when no x-axis alignment is provided,
 ///                         and refactor this function to keep the code style consistent
